syntax = "proto3";

message EngineStatus {

    string symbol = 1;
    string status = 2;
}

message HealthCheckResponse {

    repeated EngineStatus engine_status = 1;
    string relayer_status = 2;
}
service AdminService {
    rpc HealthCheck (google.protobuf.Empty) returns (HealthCheckResponse);
}

message google {

    message protobuf {

        message Empty {
        }
    }
}

enum Side {

    BID = 0;
    ASK = 1;
}

enum TimeInForce {

    GTC = 0;
    FOK = 1;
    IOC = 2;
}

message CreateBlockOrderRequest {

    oneof price_restriction {

        bool is_market_order = 4;
        string limit_price = 5;
    }

    string market = 1;
    Side side = 2;
    string amount = 3;
    TimeInForce time_in_force = 6;
}

message CreateBlockOrderResponse {

    string block_order_id = 1;
}

message Order {

    string order_id = 1;
    OrderStatus order_status = 2;
    string amount = 3;
    string price = 4;

    enum OrderStatus {

        CREATED = 0;
        PLACED = 1;
        FILLED = 2;
        EXECUTED = 3;
        COMPLETED = 4;
        REJECTED = 5;
    }
}

message Fill {

    string order_id = 1;
    string fill_id = 2;
    FillStatus fill_status = 3;
    string amount = 4;
    string price = 5;

    enum FillStatus {

        CREATED = 0;
        FILLED = 1;
        EXECUTED = 2;
        COMPLETED = 3;
        REJECTED = 4;
    }
}

message BlockOrder {

    oneof price_restriction {

        bool is_market_order = 13;
        string limit_price = 14;
    }

    string block_order_id = 1;
    string market = 2;
    Side side = 3;
    string amount = 4;
    TimeInForce time_in_force = 5;
    BlockOrderStatus status = 6;

    enum BlockOrderStatus {

        ACTIVE = 0;
        CANCELLED = 1;
        COMPLETED = 2;
        FAILED = 3;
    }
}

message GetBlockOrderRequest {

    string block_order_id = 1;
}

message GetBlockOrderResponse {

    oneof price_restriction {

        bool is_market_order = 13;
        string limit_price = 14;
    }

    BlockOrder.BlockOrderStatus status = 1;
    string market = 10;
    Side side = 11;
    string amount = 12;
    TimeInForce time_in_force = 15;
    string fill_amount = 20;
    repeated Order open_orders = 21;
    repeated Fill fills = 22;
}

message CancelBlockOrderRequest {

    string block_order_id = 1;
}

message GetBlockOrdersResponse {

    repeated BlockOrder block_orders = 1;
}

message GetBlockOrdersRequest {

    string market = 1;
}
service OrderService {
    rpc CreateBlockOrder (CreateBlockOrderRequest) returns (CreateBlockOrderResponse);
    rpc GetBlockOrder (GetBlockOrderRequest) returns (GetBlockOrderResponse);
    rpc CancelBlockOrder (CancelBlockOrderRequest) returns (google.protobuf.Empty);
    rpc GetBlockOrders (GetBlockOrdersRequest) returns (GetBlockOrdersResponse);
}

message WatchMarketRequest {

    string market = 1;
}

message WatchMarketResponse {

    EventType type = 1;
    MarketEvent market_event = 2;

    enum EventType {

        ADD = 0;
        DELETE = 1;
    }
}

message MarketEvent {

    string order_id = 1;
    string amount = 2;
    string price = 3;
    Side side = 4;
}
service OrderBookService {
    rpc WatchMarket (WatchMarketRequest) returns (stream WatchMarketResponse);
}

enum Symbol {

    BTC = 0;
    LTC = 1;
}

message NewDepositAddressRequest {

    Symbol symbol = 1;
}

message NewDepositAddressResponse {

    string address = 1;
}

message Balance {

    string symbol = 1;
    int64 total_balance = 2;
    int64 total_channel_balance = 3;
}

message GetBalancesResponse {

    repeated Balance balances = 1;
}

message CommitBalanceRequest {

    Symbol symbol = 1;
    int64 balance = 2;
}
service WalletService {
    rpc NewDepositAddress (NewDepositAddressRequest) returns (NewDepositAddressResponse);
    rpc GetBalances (google.protobuf.Empty) returns (GetBalancesResponse);
    rpc CommitBalance (CommitBalanceRequest) returns (google.protobuf.Empty);
}